<resources>
    <string name="act_main_rb_home">首页</string>
    <string name="act_main_rb_star">体系</string>
    <string name="act_main_rb_search">发现</string>
    <string name="act_main_rb_me">我的</string>
    <string name="fg_me_tv_click_login">登录 / 注册</string>

    <string name="please_input_phone">请输入账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_phone">注册新用户</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="register_new_user">注册新用户</string>
    <string name="register">注册</string>
    <string name="fg_me_setting">设置</string>
    <string name="find_you_want">搜索感兴趣的内容</string>
    <string name="fg_me_tv_star">积分</string>
    <string name="fg_me_tv_ranking">排行榜</string>
    <string name="fg_me_tv_grade">积分等级</string>


    <string name="act_me_edit">编辑</string>
    <string name="setting_log_out">退出账号</string>


    <string name="web_detail">文章详情</string>
    <string name="act_title_collection">收藏集</string>
</resources>
