<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.allens.ui.activity.MainVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.allens.ui.activity.MainActivity">

        <FrameLayout
            android:id="@+id/act_main_fl"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/act_main_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <RadioButton
                style="@style/BaseStyleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_rb_home"
                app:color_checked="@{vm.selectColor}"
                app:color_normal="@{vm.defColor}" />

            <RadioButton
                style="@style/BaseStyleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_rb_star"
                app:color_checked="@{vm.selectColor}"
                app:color_normal="@{vm.defColor}" />

            <RadioButton
                style="@style/BaseStyleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_rb_project"
                app:color_checked="@{vm.selectColor}"
                app:color_normal="@{vm.defColor}" />

            <RadioButton
                style="@style/BaseStyleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/act_main_rb_me"
                app:color_checked="@{vm.selectColor}"
                app:color_normal="@{vm.defColor}" />
        </RadioGroup>


    </LinearLayout>
</layout>